feat: enhance order processing by adding instant scheduling for order status jobs
Signed-off-by: kabi175 <kabilan.mee@gmail.com>